# Password-Manager

./: .flake8  .gitignore  LICENSE  README.md
.github/workflows/: main.yml
api/: .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md
api/assets/markdown/: description.md
api/src/: main.py  requirements.txt
api/src/core/: __init__.py
api/src/core/db/: __init__.py  tortoise_conf.py
api/src/core/helpers/: __init__.py  argon_hash.py  exceptions.py
api/src/core/models/: __init__.py  api.py  passwords.py  users.py
api/src/routes/: __init__.py  other.py  passwords.py  users.py
api/tests/: __init__.py  username_validation.py
app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/assets/: index.ts
app/src/components/: edit_pswd_form.tsx  index.ts  navbar.tsx  pswd_form.tsx  pswd_table.tsx  userform.tsx
app/src/core/: backup.ts  formCallbacks.ts  index.ts  kdf.ts  requests.ts  types.ts  validators.ts
app/src/pages/: all_passwords.tsx  backup.tsx  generate.tsx  index.ts  login.tsx  new_user.tsx  passwords.tsx  signup.tsx  wavy.tsx
app/tests/: argon_hash.test.js
