[package]
name = "password1"
version = "1.0.1"
description = "An open source, free and secure password manager"
authors = ["Siddhesh Zantye"]
license = "MIT"
repository = "https://github.com/st22209/Password-Manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri = { version = "1.3", features = ["clipboard-all", "dialog-all", "fs-all", "notification-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
custom-protocol = ["tauri/custom-protocol"]
